# cppapplications

./: .gitignore  CMakeLists.txt  README.md
include/: image_processing.h
src/: image_processing.cpp  main.cpp
